Fixed dark mode / light mode for Firefox and Chrome

--- a/games/chrome-dino/style.css
+++ b/games/chrome-dino/style.css
@@ -31,7 +31,7 @@ html, body {
   transition: background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 .offline.inverted {
-  background-color: #000;
+  background-color: #fff;
   filter: invert(1);
 }
 
@@ -131,8 +131,8 @@ html, body {
   }
 
   .offline.inverted {
-    background-color: var(--background-color);
-    /*filter: invert(0);*/
+    /* background-color: var(--background-color); */
+    filter: invert(1);
   }
 
   .offline.inverted body {
